:art: fix whitespace on headers, hotel section

--- a/sass/_band.scss
+++ b/sass/_band.scss
@@ -31,7 +31,7 @@
     float: none;
     margin-left: auto;
     margin-right: auto;
-    padding-bottom: $inner-padding;
+    padding-bottom: 1.5 * $inner-padding;
   }
 
   &--body {
